Collect-TV-20180201/src/objects/TECHNET_Item__c.object
<CustomObject>
    <description>Object to hold all of the Dell-Corning product records</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the TECHNET Item</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hide_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Display_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Display Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Item_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Item Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Unit_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Unit Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Unique item number for the TECHNET Item</description>
        <label>Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <description>The maximum quantity of the product that can be ordered at a time</description>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Per_Unit__c</fullName>
        <description>Unit cost of a TECHNET Item</description>
        <label>Price Per Unit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requires_Additional_Static_Cling_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Additional Static Cling Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNET_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>The type of unit that the product is sold in</description>
        <label>Unit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TECHNET Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>TNET_Is_Active__c</columns>
        <columns>Item_Number__c</columns>
        <columns>Max_Quantity__c</columns>
        <columns>Price_Per_Unit__c</columns>
        <columns>Unit_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TECHNET Item Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Dell_Corning</fullName>
        <active>true</active>
        <label>Dell-Corning</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>